Переботал систему под postgres. Прорабатываю аутентификацию пользователей как на уровне плагина экзегезиса, так и на уровне контролеров и сервисов
